# MoneyPrinter

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.FE  Dockerfile.FE.Nuxt  ENV.md  EnvironmentVariables.md  LICENSE  Local.md  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  setup.sh
.github/: Sponsor FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
Backend/: constants.py  db.py  gpt.py  logstream.py  main.py  models.py  pipeline.py  repository.py  search.py  settings.py  tiktokvoice.py  tts.py  utils.py  video.py  worker.py  youtube.py
Frontend/: app.js  app.js.bak  index.html
UI/: app.config.ts  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
UI/components/: GenerateScript.vue
UI/content/docs/: index.md
UI/layouts/: default.vue
UI/pages/: index.vue  settings.vue
UI/pages/docs/: [...slug].vue
UI/pages/videos/: index.vue
docs/: README.md  architecture.md  configuration.md  docker.md  quickstart.md  testing.md  troubleshooting.md
env/: pyvenv.cfg
env/include/site/python3.12/pygame/: camera.h
env/include/site/python3.12/pygame/include/: _pygame.h  pgplatform.h
test/: app.html  index.html
tests/: conftest.py  test_api_jobs.py  test_api_misc.py  test_repository.py  test_utils.py  test_worker.py
